--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -243,7 +243,7 @@
           <h4 class="text-white font-semibold text-sm uppercase tracking-wider mb-4">Company</h4>
           <ul class="space-y-2 text-sm">
             <li><a href="/for-coffee-shops/#about" class="hover:text-white">Mission & Values</a></li>
-            <li><a href="https://joe.coffee/merchant-tos/" class="hover:text-white">Merchant Terms</a></li>
+            <li><a href="/merchant-terms/" class="hover:text-white">Merchant Terms</a></li>
             <li><a href="/privacy/" class="hover:text-white">Privacy Policy</a></li>
             <li><a href="/terms/" class="hover:text-white">Terms of Service</a></li>
           </ul>
